tests/golden/errors/generic_bare_reference.py
def ident[T](x: T) -> T:
    return x


h = ident
print(h(1))
